# instagram-clone

./: .gitignore  README.md  start.ps1
backend/: .env  .env.example  .gitignore  celerybeat-schedule  celerybeat-schedule-shm  celerybeat-schedule-wal  dump.rdb  pyproject.toml  pyrightconfig.json
backend/alembic/: env.py
backend/alembic/versions/: 071cca6f6bb6_add_timezone_support_to_expires_at.py  0c3bf66c3f37_adding_public_id_column_in_story_model.py  181e3abc591b_adding_comment_table.py  2403c4351515_add_posts_and_post_images_tables.py  285fd658575a_init.py  35c6cf29ea4e_add_public_id_column_in_user_model.py  3ebd1e5ebc3f_add_updated_at_to_user_table.py  5be72b54e467_adding_follow_table.py  624cd29f87e2_deleting_expire_at_colummn_from_story_.py  98c9e7da3310_adding_story_table.py  9948e2f7a5c9_add_public_id_column_in_post_model.py  a860bb59a62d_init.py  c1c79225d798_add_deleted_at_to_users.py  c92ea6db17f9_adding_like_table.py  f758c1c31e3d_added_is_verified_and_verification_.py
backend/src/: main.py  utils.py
backend/src/celery/: app.py  beat.py  config.py  worker.py
backend/src/core/: exception_handler.py  exceptions.py  security.py  settings.py
backend/src/database/: config.py  dependency.py
backend/src/dependencies/: auth.py  database.py
backend/src/repositories/: auth_repo.py  comment_repo.py  follow_repo.py  like_repo.py  post_image_repo.py  post_repo.py  story_repo.py  user_repo.py
backend/src/routes/: auth_api.py  comment_api.py  follow_api.py  health_check_api.py  like_api.py  post_api.py  search_api.py  story_api.py  user_api.py
(+69 files in other folders)
